add better defaults